--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>测试的</title>
+<title></title>
 </head>
 
-<body>
-我是测试的哈  
+<body> 
 </body>
 </html>
